--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
     <script src="js/machinery/fileUploader.js"></script>
     <script src="js/machinery/sequenceTabs.js"></script>
     <script src="js/machinery/resultTabs.js"></script>
+    <script src="js/machinery/resultScroll.js"></script>
+    <script src="js/machinery/interfaceButtons.js"></script>
     <script src="js/machinery/calculations/combinations.js"></script>
-
 
 
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
@@ -135,8 +136,7 @@
                 </ul>
             </nav>
         </div>
-
-
+    </div>
 
 
     <div class="interface-area">
@@ -152,27 +152,15 @@
 
             <div class="controls">
                 <div class="button-container">
-                    <a class="interface-button to-full-screen-button" applyToId="sequence-input" state="full-screen" href="#">
-                        <span class="icon icon-medium">Full screen</span>
+                    <a class="interface-button" id="change-sequence-view" data-apply-to-id="sequence-input" href="#">
+                        <span class="icon icon-medium">change-sequence-view</span>
                     </a>
-                    <a class="interface-button to-hidden-button" applyToId="sequence-input" state="hidden" href="#">
-                        <span class="icon icon-medium">Show sequence</span>
-                    </a>
-                    <a class="interface-button to-flattened-button" applyToId="sequence-input" state="flattened" href="#">
-                        <span class="icon icon-medium">Make inline</span>
-                    </a>
-                    <a class="interface-button" id="add-tab-button" applyToId="sequence-tabs" href="#">
-                        <span class="icon icon-medium">Add tab</span>
+                    <a class="interface-button" id="show-title-button" href="#">
+                        <span class="icon icon-medium">Show title</span>
                     </a>
                     <a class="interface-button upload-button" applyToId="sequence-input" href="#">
                         <span class="icon icon-medium">Select a text file:</span>
                         <input type="file" id="fileInput">
-                    </a>
-                    <a class="interface-button" id="show-title-button" applyToId="sequence-tabs" href="#">
-                        <span class="icon icon-medium">Show title</span>
-                    </a>
-                    <a class="interface-button" id="add-to-results-button" applyToId="sequence-tabs" href="#">
-                        <span class="icon icon-medium">Add to Result</span>
                     </a>
                 </div>
 
@@ -181,13 +169,14 @@
                 </a>
             </div>
 
-            <textarea name="sequenceInput" id="sequence-input" class="round" rows="3" spellcheck=false
-                      placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
+            <textarea id="title-input" class="round hidden flattened" rows="3" spellcheck=false
+                      placeholder="Put a title here..."></textarea>
+            <textarea name="sequenceInput" id="sequence-input" class="round flattened" rows="3" spellcheck=false
+                      placeholder="Put a sequence here..."></textarea>
         </div>
 
 
         <div class="interface-component" id="result-cmp">
-            <div id="result" class="round"></div>
         </div>
 
 
