-input and view buttons are done
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </a>
             </div>
 
-            <textarea id="title-input" class="round hidden flattened" rows="3" spellcheck=false
+            <textarea id="title-input" class="round flattened" rows="3" spellcheck=false
                       placeholder="Put a title here..."></textarea>
             <textarea name="sequenceInput" id="sequence-input" class="round flattened" rows="3" spellcheck=false
                       placeholder="Put a sequence here..."></textarea>
