-highlighting is fixed now
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
             <div class="controls">
                 <div class="button-container">
-                    <a class="interface-button" id="change-sequence-view" data-apply-to-id="sequence-input" href="#">
+                    <a class="interface-button" id="change-sequence-view" href="#">
                         <span class="icon icon-medium">change-sequence-view</span>
                     </a>
                     <a class="interface-button" id="show-title-button" href="#">
