-all libraries are saved to project directory. cdn urls are commented out
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,47 +16,69 @@
 
     <title>Sequence Motif Location Tool (MoLoTool)</title>
 
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-
-    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <!--jQuery -->
+    <script src="externalLibs/jQuery/jquery.min.js"></script>
+    <link rel="stylesheet" href="externalLibs/jQuery/jquery-ui.css">
+    <script src="externalLibs/jQuery/jquery-ui.min.js"></script>
+    <!--&lt;!&ndash;jQuery &ndash;&gt;-->
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
+    <!--<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">-->
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>-->
 
 
     <!--Data tables -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css"/>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="externalLibs/DataTables/jquery.dataTables.min.css"/>
+    <script type="text/javascript" src="externalLibs/DataTables/jquery.dataTables.min.js"></script>
+    <!--&lt;!&ndash;Data tables &ndash;&gt;-->
+    <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css"/>-->
+    <!--<script type="text/javascript" src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>-->
 
 
     <!--Data tables (buttons) -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.2.4/css/buttons.dataTables.min.css"/>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/dataTables.buttons.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="externalLibs/DataTablesButtons/buttons.dataTables.min.css"/>
+    <script type="text/javascript" src="externalLibs/DataTablesButtons/dataTables.buttons.min.js"></script>
+    <!--&lt;!&ndash;Data tables (buttons) &ndash;&gt;-->
+    <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.2.4/css/buttons.dataTables.min.css"/>-->
+    <!--<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/dataTables.buttons.min.js"></script>-->
 
 
     <!--Data tables (buttons) -->
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.colVis.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.flash.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.html5.min.js"></script>
+    <!--&lt;!&ndash;Data tables (buttons) &ndash;&gt;-->
+    <!--<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.colVis.min.js"></script>-->
+    <!--<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.flash.min.js"></script>-->
+    <!--<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.html5.min.js"></script>-->
 
 
     <!--Data tables (buttons) [jszip, pdfmake, vfs_fonts] alert: fonts must be after pdfmake -->
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
-    <script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
-    <script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
+    <script type="text/javascript" src="externalLibs/DataTablesButtons/AdditionalFeatures/jszip.min.js"></script>
+    <script type="text/javascript" src="externalLibs/DataTablesButtons/AdditionalFeatures/pdfmake.min.js"></script>
+    <script type="text/javascript" src="externalLibs/DataTablesButtons/AdditionalFeatures/vfs_fonts.js"></script>
+    <!--&lt;!&ndash;Data tables (buttons) [jszip, pdfmake, vfs_fonts] alert: fonts must be after pdfmake &ndash;&gt;-->
+    <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>-->
+    <!--<script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>-->
+    <!--<script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>-->
 
 
-    <!--Color picker - Spectrum -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
+    <!--Color picker - Spectrum 09.07.2017 - 1.8.0-->
+    <script src="externalLibs/spectrum/spectrum.js"></script>
+    <link rel="stylesheet" type="text/css" href="externalLibs/spectrum/spectrum.css">
+    <!--&lt;!&ndash;Color picker - Spectrum 09.07.2017 - 1.8.0&ndash;&gt;-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>-->
+    <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">-->
 
-
+>
     <!--Github icons - Octicons -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.0.0/octicons.min.css">
 
+    <!--noUIslider -->
+    <script src="externalLibs/nouislider/nouislider.min.js"></script>
+    <link rel="stylesheet" href="externalLibs/nouislider/nouislider.min.css">
 
+    <!--Project Modules -->
     <script src="js/machinery/calculations/motifMath.js"></script>
-    <script src="js/nouislider.min.js"></script>
     <script src="js/machinery/AppContainer.js"></script>
 
 
@@ -87,7 +109,6 @@
 
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
     <link rel="stylesheet" href="css/dataTable.css">
-    <link rel="stylesheet" href="css/nouislider.min.css">
     <link rel="stylesheet" href="css/pSlider.css">
     <link rel="stylesheet" href="css/resultAndSeqInput.css">
     <link rel="stylesheet" href="css/UIComponents.css">
