--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <script src="js/machinery/fileUploader.js"></script>
     <script src="js/machinery/sequenceTabs.js"></script>
     <script src="js/machinery/resultTabs.js"></script>
-    <script src="js/machinery/resultScroll.js"></script>
+    <script src="js/machinery/resultSlider.js"></script>
     <script src="js/machinery/interfaceButtons.js"></script>
     <script src="js/machinery/calculations/combinations.js"></script>
 
@@ -174,14 +174,17 @@
                     <a class="interface-button" id="change-sequence-view" href="#">
                         <span class="icon icon-medium">change-sequence-view</span>
                     </a>
-                    <a class="interface-button upload-button" applyToId="sequence-input" href="#">
+                    <a class="interface-button upload-button" data-applyToId="sequence-input" href="#">
                         <span class="icon icon-medium">Select a text file:</span>
                         <input type="file" id="fileInput">
                     </a>
                 </div>
 
-                <a class="interface-button to-hidden-button" applyToId="motif-table-cmp" state="hidden" href="#">
+                <a class="interface-button to-hidden-button" data-applyToId="motif-table-cmp" data-state="hidden" href="#">
                     <span class="icon icon-medium">Hide table</span>
+                </a>
+                <a class="interface-button to-hidden-button" data-applyToId="motif-table-cmp" data-state="hidden" href="#">
+                    <span class="icon icon-medium">Comparison mode - multiply</span>
                 </a>
             </div>
 
@@ -198,6 +201,7 @@
 
 
         <div class="interface-component" id="result-cmp">
+            <div id='result-slider' class='slider'></div>
         </div>
 
 
