--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
     <link rel="stylesheet" href="css/dataTable.css">
     <link rel="stylesheet" href="css/pSlider.css">
-    <link rel="stylesheet" href="css/resultAndSeqInput.css">
     <link rel="stylesheet" href="css/UIComponents.css">
     <link rel="stylesheet" href="css/resultContainer.css">
     <link rel="stylesheet" href="css/navigationTopBar.css">
@@ -183,6 +182,20 @@
                 <a class="interface-button add-to-result-button" data-applyToId="motif-table-cmp" href="#">
                     <span class="icon icon-medium">Add tab</span>
                 </a>
+
+                <div class="sliderBox">
+                    <div class="inputBox">
+                        <div class="inputUnit">
+                            <label for='logSlider-input' class='label'>-log10(P-value):</label>
+                            <input type='text' class='input' id="logSlider-input">
+                        </div>
+                        <div class="inputUnit">
+                            <label for='linearSlider-input' class='label'>P-value:</label>
+                            <input type='text' class='input' id="linearSlider-input">
+                        </div>
+                    </div>
+                    <div id='log-slider' class='slider'></div>
+                </div>
             </div>
 
             <textarea id="title-input" class="round flattened" rows="3" spellcheck=false
@@ -205,7 +218,7 @@
 
 
         <div class="interface-component" id="log-slider-cmp">
-            <div class="sliderBox">
+         <!--   <div class="sliderBox">
                 <div id='log-slider' class='slider'></div>
                 <div class="inputBox">
                     <div class="inputUnit">
@@ -217,7 +230,7 @@
                         <input type='text' class='input' id="linearSlider-input">
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
 
