-Branch without sequence Tabs
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
     <script src="js/machinery/uiBuilder.js"></script>
     <script src="js/machinery/resultContainer.js"></script>
     <script src="js/machinery/fileUploader.js"></script>
-    <script src="js/machinery/sequenceTabs.js"></script>
+    <script src="js/machinery/sequenceLibrary.js"></script>
     <script src="js/machinery/resultTabs.js"></script>
     <script src="js/machinery/resultSlider.js"></script>
-    <script src="js/machinery/interfaceButtons.js"></script>
+    <script src="js/machinery/motifPickerButtons.js"></script>
     <script src="js/machinery/calculations/combinations.js"></script>
 
 
@@ -183,8 +183,11 @@
                 <a class="interface-button to-hidden-button" data-applyToId="motif-table-cmp" data-state="hidden" href="#">
                     <span class="icon icon-medium">Hide table</span>
                 </a>
-                <a class="interface-button to-hidden-button" data-applyToId="motif-table-cmp" data-state="hidden" href="#">
+                <a class="interface-button" data-applyToId="motif-table-cmp" href="#">
                     <span class="icon icon-medium">Comparison mode - multiply</span>
+                </a>
+                <a class="interface-button add-to-result-button" data-applyToId="motif-table-cmp" href="#">
+                    <span class="icon icon-medium">Add tab</span>
                 </a>
             </div>
 
