Update LICENSE DataTables 1.10.15
-Branch with sequence Tabs

Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>
-Added scrollbar library. Visual changes

Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -62,20 +62,27 @@
     <script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
 
 
-    <!--&lt;!&ndash;Color picker - Spectrum 09.07.2017 - 1.8.0&ndash;&gt;-->
-    <!--<script src="externalLibs/spectrum/spectrum.js"></script>-->
-    <!--<link rel="stylesheet" type="text/css" href="externalLibs/spectrum/spectrum.css">-->
     <!--Color picker - Spectrum 09.07.2017 - 1.8.0-->
+    <script src="externalLibs/spectrum/spectrum.js"></script>
+    <link rel="stylesheet" type="text/css" href="externalLibs/spectrum/spectrum.css">
+    <!--&lt;!&ndash;Color picker - Spectrum 09.07.2017 - 1.8.0&ndash;&gt;
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">-->
 
->
+
     <!--Github icons - Octicons -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.0.0/octicons.min.css">
+
 
     <!--noUIslider -->
     <script src="externalLibs/nouislider/nouislider.min.js"></script>
     <link rel="stylesheet" href="externalLibs/nouislider/nouislider.min.css">
+
+
+    <!--scrollBar -->
+    <script src="externalLibs/scrollBar/jquery.mCustomScrollbar.concat.min.js"></script>
+    <link rel="stylesheet" href="externalLibs/scrollBar/jquery.mCustomScrollbar.min.css">
+
 
     <!--Project Modules -->
     <script src="js/machinery/AppContainer.js"></script>
@@ -128,13 +135,6 @@
                                 <a href="#">Table</a>
                                 <a id="dtTest"></a>
                             </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">Show <span class="icon octicon octicon-eye"></span> <b class="caret"></b></a>
-                        <ul class="sub-nav">
-                            <li><a class="show-button" applyToId="motif-list-cmp" href="#">Motifs</a></li>
-                            <li><a class="show-button" applyToId="sequence-input-cmp" href="#">Sequence input</a></li>
                         </ul>
                     </li>
                 </ul>
