--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
 
     <!--scrollBar -->
-    <script src="externalLibs/scrollBar/jquery.mCustomScrollbar.concat.min.js"></script>
-    <link rel="stylesheet" href="externalLibs/scrollBar/jquery.mCustomScrollbar.min.css">
+    <!--<script src="externalLibs/scrollBar/jquery.mCustomScrollbar.concat.min.js"></script>
+    <link rel="stylesheet" href="externalLibs/scrollBar/jquery.mCustomScrollbar.min.css">-->
 
 
     <!--Project Modules -->
@@ -141,7 +141,7 @@
                 <ul class="nav pull-left top-first">
                     <li class="search-container">
                         <span class="icon octicon octicon-search"></span>
-                        <input type="text" id="search" placeholder="Select motif..." autofocus>
+                        <input id="search" placeholder="Select motif..." autofocus>
                         <div class="suggestions">
                             <div id='motif-list'></div>
                             <div id="ifMore-container"></div>
@@ -161,48 +161,47 @@
         <div class="interface-component" id="sequence-input-cmp">
             <div class="controls">
                 <div class="button-container">
-                    <a class="interface-button" id="show-title-button" href="#">
+                    <!--<a class="interface-button" id="show-title-button" href="#">
                         <span class="icon icon-medium">Show title</span>
                     </a>
                     <a class="interface-button" id="change-sequence-view" href="#">
                         <span class="icon icon-medium">change-sequence-view</span>
                     </a>
+                    <a class="interface-button add-to-result-button" data-applyToId="motif-table-cmp" href="#">
+                        <span class="icon icon-medium">Add tab</span>
+                    </a>-->
                     <a class="interface-button upload-button" data-applyToId="sequence-input" href="#">
                         <span class="icon icon-medium">Select a text file:</span>
                         <input type="file" id="fileInput">
                     </a>
+                    <a id="cmp-mode-button" class="interface-button" data-applyToId="motif-table-cmp" href="#">
+                        <span class="icon icon-medium">Comparison Single</span>
+                    </a>
+                    <a class="interface-button to-hidden-button" data-applyToId="motif-table-cmp" data-state="hidden" href="#">
+                        <span class="icon icon-medium">Hide table</span>
+                    </a>
                 </div>
-
-                <a class="interface-button to-hidden-button" data-applyToId="motif-table-cmp" data-state="hidden" href="#">
-                    <span class="icon icon-medium">Hide table</span>
-                </a>
-                <a id="cmp-mode-button" class="interface-button" data-applyToId="motif-table-cmp" href="#">
-                    <span class="icon icon-medium">Comparison mode - Single</span>
-                </a>
-                <a class="interface-button add-to-result-button" data-applyToId="motif-table-cmp" href="#">
-                    <span class="icon icon-medium">Add tab</span>
-                </a>
 
                 <div class="sliderBox">
                     <div class="inputBox">
                         <div class="inputUnit">
                             <label for='logSlider-input' class='label'>-log10(P-value):</label>
-                            <input type='text' class='input' id="logSlider-input">
+                            <input class='input' id="logSlider-input">
                         </div>
                         <div class="inputUnit">
                             <label for='linearSlider-input' class='label'>P-value:</label>
-                            <input type='text' class='input' id="linearSlider-input">
+                            <input class='input' id="linearSlider-input">
                         </div>
                     </div>
                     <div id='log-slider' class='slider'></div>
                 </div>
             </div>
 
-            <textarea id="title-input" class="round flattened" rows="3" spellcheck=false
+            <!--<textarea id="title-input" class="round flattened" rows="3" spellcheck=false
                       placeholder="Put a title here..."></textarea>
 
             <textarea name="sequenceInput" id="sequence-input" class="round flattened" rows="3" spellcheck=false
-                      placeholder="Put a sequence here..."></textarea>
+                      placeholder="Put a sequence here..."></textarea>-->
 
             <div id='motif-list-selected-cmp' class="interface-component empty">
                 <div id='motif-list-selected'></div>
