-added lock-button
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <!--Github icons - Octicons EXT-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.0.0/octicons.min.css">
 
+    <!--Google Web Fonts. EXT -->
+    <link href="css/utilities/icon.css" rel="stylesheet">
 
     <!--noUIslider -->
     <script src="externalLibs/nouislider/nouislider.min.js"></script>
@@ -213,23 +215,6 @@
             <div id='result-tabs'></div>
             <div id='result-sequences'></div>
             <div id='result-slider' class='slider'></div>
-        </div>
-
-
-        <div class="interface-component" id="log-slider-cmp">
-         <!--   <div class="sliderBox">
-                <div id='log-slider' class='slider'></div>
-                <div class="inputBox">
-                    <div class="inputUnit">
-                        <label for='logSlider-input' class='label'>-log10(P-value):</label>
-                        <input type='text' class='input' id="logSlider-input">
-                    </div>
-                    <div class="inputUnit">
-                        <label for='linearSlider-input' class='label'>P-value:</label>
-                        <input type='text' class='input' id="linearSlider-input">
-                    </div>
-                </div>
-            </div>-->
         </div>
 
 
