-table: generate table button is created
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         </label>
                     </a>
                     <a id="cmp-mode-button" class="interface-button" href="#"></a>
-                    <a class="to-hidden-button interface-button" data-applyToId="motif-table-cmp" href="#"></a>
+                    <a class="to-hidden-button interface-button" href="#"></a>
                 </div>
 
                 <div class="sliderBox">
