-index: changed search ID from - "#search" to "#motif-search" -index: added some options to search input form
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <li class="search-container">
                         <!--<i class="icon material-icons md-18">search</i>-->
                         <span class="icon octicon octicon-search"></span>
-                        <input id="search" placeholder="Select motif..." autofocus>
+                        <input id="motif-search" placeholder="Select motif..." autofocus autocomplete="off" autocorrect="off" autocapitalize="off">
                         <div class="suggestions">
                             <div id='motif-list'></div>
                             <div id="ifMore-container"></div>
