--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <span class="icon octicon octicon-search"></span>
                         <input id="motif-search" placeholder="Select motif..." autofocus autocomplete="off" autocorrect="off" autocapitalize="off">
                         <div class="suggestions">
+                            <div id='legend-container' class="suggestion" ></div>
                             <div id='motif-list'></div>
                             <div id="ifMore-container"></div>
                         </div>
