-index.html: buttons-controls css: "float:right" -search: ifMore container changes
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -134,9 +134,11 @@
                         <span class="icon octicon octicon-search"></span>
                         <input id="motif-search" placeholder="Select motif..." autofocus autocomplete="off" autocorrect="off" autocapitalize="off">
                         <div class="suggestions">
-                            <div id='legend-container' class="suggestion" ></div>
+                            <div id='legend-container' class="suggestion"></div>
                             <div id='motif-list'></div>
-                            <div id="ifMore-container"></div>
+                            <div id="ifMore-container">
+                                <div class="ifMore-value suggestion"></div>
+                            </div>
                         </div>
                     </li>
                 </ul>
