-added full digits support -further refactoring needed -it works, but css side of digit support is a complete mess
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <script src="js/machinery/resultTabs/resultTabs.js"></script>
     <script src="js/machinery/resultTabs/comparisonMode.js"></script>
     <script src="js/machinery/resultTabs/digitGuidance.js"></script>
+    <script src="js/machinery/resultTabs/tabLocks.js"></script>
 
 
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
