-added Clear button
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
                     </li>
                 </ul>
                 <ul class="nav pull-right top-second">
-                    <a id="demo-button" class="interface-button demo" href="#"></a>
-                    <a id="about-button" class="interface-button demo" href="#"></a>
+                    <a id="clear-button" class="interface-button" href="#"></a>
+                    <a id="demo-button" class="interface-button" href="#"></a>
+                    <a id="about-button" class="interface-button" href="#"></a>
                 </ul>
             </nav>
         </div>
