--- a/index.html
+++ b/index.html
@@ -179,15 +179,6 @@
         <div class="interface-component" id="sequence-input-cmp">
             <div class="controls">
                 <div class="button-container">
-                    <!--<a class="interface-button" id="show-title-button" href="#">
-                        <span class="icon icon-medium">Show title</span>
-                    </a>
-                    <a class="interface-button" id="change-sequence-view" href="#">
-                        <span class="icon icon-medium">change-sequence-view</span>
-                    </a>
-                    <a class="interface-button add-to-result-button" data-applyToId="motif-table-cmp" href="#">
-                        <span class="icon icon-medium">Add tab</span>
-                    </a>-->
                     <a class="interface-button upload-button" href="#">
                         <label class="custom-file-upload">
                             <input type="file" id="fileInput">
@@ -195,9 +186,9 @@
                             <i class="material-icons md-dark">add_box</i>
                         </label>
                     </a>
-                    <a class="interface-button open-input" href="#"></a>
-                    <a class="interface-button" id="cmp-mode-button" href="#"></a>
-                    <a class="to-hidden-button interface-button" href="#"></a>
+                    <a id= "open-input-button" class="interface-button" href="#"></a>
+                    <a id="change-mode-button" class="interface-button" href="#"></a>
+                    <a id="open-table-button" class="interface-button" href="#"></a>
                 </div>
 
                 <div class="sliderBox">
@@ -214,21 +205,12 @@
                     <div id='log-slider' class='slider'></div>
                 </div>
             </div>
-
-            <!--<textarea id="title-input" class="round flattened" rows="3" spellcheck=false
-                      placeholder="Put a title here..."></textarea>
-
-            <textarea name="sequenceInput" id="sequence-input" class="round flattened" rows="3" spellcheck=false
-                      placeholder="Put a sequence here..."></textarea>-->
-
-
         </div>
 
 
         <div class="interface-component" id="result-cmp">
             <div id='result-tabs'></div>
             <div id='result-sequences'></div>
-            <div id='result-slider' class='slider'></div>
         </div>
 
 
