-buttons: added copy button with clipboard library. need improvement
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
     <!--<script src="externalLibs/scrollBar/jquery.mCustomScrollbar.concat.min.js"></script>
     <link rel="stylesheet" href="externalLibs/scrollBar/jquery.mCustomScrollbar.min.css">-->
 
+    <!--clipboard copy -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
 
     <!--Project Modules -->
     <script src="js/machinery/supportComponents/AppContainer.js"></script>
