-buttons: fixed empty sequence addition -resultTabs: fixed seq names title length
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <label class="custom-file-upload">
                         <input type="file" id="fileInput">
                         Upload file
-                        <i class="material-icons md-dark">add_box</i>
+                        <i class="material-icons md-dark">file_upload</i>
                     </label>
                 </a>
                 <a class="interface-button add-sequence" href="#"></a>
