-buttons: added clipboardCopy module. -bug: now we copy only desired line -externalLibs: added clipboard.min.js
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <link rel="stylesheet" href="externalLibs/scrollBar/jquery.mCustomScrollbar.min.css">-->
 
     <!--clipboard copy -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
+    <script src="externalLibs/clipboard_js/clipboard.min.js"></script>
 
     <!--Project Modules -->
     <script src="js/machinery/supportComponents/AppContainer.js"></script>
@@ -124,6 +124,7 @@
     <script src="js/machinery/resultTabs/comparisonMode.js"></script>
     <script src="js/machinery/resultTabs/digitGuidance.js"></script>
     <script src="js/machinery/resultTabs/tabLocks.js"></script>
+    <script src="js/machinery/resultTabs/clipboardCopy.js"></script>
 
 
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
