-index: finally fixed lock button, without any clipping
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
             <nav class="the-nav clearfix">
                 <ul class="nav pull-left top-first">
                     <li class="search-container">
-                        <!--<i class="icon material-icons md-18">search</i>-->
                         <span class="icon octicon octicon-search"></span>
                         <input id="motif-search" placeholder="Select motif..." autocomplete="off" autocorrect="off" autocapitalize="off">
                         <div class="suggestions">
@@ -216,7 +215,10 @@
 
         <div class="interface-component" id="result-cmp">
             <div id='result-tabs'></div>
-            <div id='result-sequences'></div>
+            <div id='result-sequences'>
+                <div class="patch border-patch"></div>
+                <div class="patch area-patch "></div>
+            </div>
         </div>
 
 
