-motifSearch: now there are two states, and scrollable result
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
                         <div class="suggestions">
                             <div id='legend-container' class="suggestion"></div>
                             <div id='motif-list'></div>
-                            <div id="ifMore-container">
-                                <div class="ifMore-value suggestion"></div>
+                            <div id="ifMore-container" data-size="">
+                                <div class="ifMore-value suggestion">
+                                    <a id= "show-more-button" class="interface-button" href="#"></a>
+                                </div>
                             </div>
                         </div>
                     </li>
