-index: created AppTitle
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
                             </div>
                         </div>
                     </li>
+                    <li class="title-container">
+                        MoLoTool: Transcription Factor Motif Location Toolbox
+                    </li>
                 </ul>
                 <ul class="nav pull-right top-second">
-                    <a id= "open-input-button" class="interface-button" href="#"></a>
                     <a id="change-mode-button" class="interface-button" href="#"></a>
                     <a id="open-table-button" class="interface-button" href="#"></a>
                     <a id="clear-button" class="interface-button" href="#"></a>
