--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                       placeholder="Put a sequence here..."></textarea>
 
             <div class="input-controls">
+                <a class="interface-button open-sequence" href="#"></a>
                 <a class="interface-button input-method" href="#"></a>
                 <a class="interface-button upload-button" href="#">
                     <label class="custom-file-upload">
@@ -212,7 +213,7 @@
                     </label>
                 </a>
                 <a class="interface-button add-sequence" href="#"></a>
-                <a class="interface-button open-sequence" href="#"></a>
+                <a class="interface-button zoom-button" href="#"></a>
             </div>
         </div>
 
