--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <ul class="nav pull-left top-first">
                     <li class="search-container">
                         <span class="icon octicon octicon-search"></span>
-                        <input id="motif-search" placeholder="Select motif..." autocomplete="off" autocorrect="off" autocapitalize="off">
+                        <input id="motif-search" placeholder="Select motif" autocomplete="off" autocorrect="off" autocapitalize="off">
                         <div class="suggestions">
                             <div id='legend-container' class="suggestion"></div>
                             <div id='motif-list'></div>
@@ -169,6 +169,9 @@
         </div>
     </div>
 
+    <div id='help-cmp' class="interface-component">
+
+    </div>
 
     <div class="interface-area">
         <div id='motif-list-selected-cmp' class="interface-component empty">
@@ -178,11 +181,8 @@
 
         <div class="interface-component" id="sequence-input-cmp">
             <div class="controls">
-                <div class="button-container">
-                </div>
-
                 <div class="sliderBox">
-                    <div class="inputBox">
+                    <div class="inputBox left">
                         <div class="inputUnit">
                             <label for='logSlider-input' class='label'>-log10(P-value):</label>
                             <input class='input' id="logSlider-input">
@@ -192,7 +192,7 @@
                             <input class='input' id="linearSlider-input">
                         </div>
                     </div>
-                    <div id='log-slider' class='slider'></div>
+                    <div id='log-slider' class='slider right'></div>
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
 
         <div class="interface-component" id="manual-seq-input">
             <textarea spellcheck=false
-                      placeholder="Put a sequence here..."></textarea>
+                      placeholder="Insert nucleotide sequences in fasta format here."></textarea>
 
             <div class="input-controls">
                 <a class="interface-button open-sequence" href="#"></a>
